<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.SettingsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/general"
            android:textColor="@color/home_red"
            android:textSize="14sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:gravity="center_vertical">

            <TextView
                style="@style/setting_bold_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#74aaaaaa"
            android:layout_marginTop="@dimen/margin15"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/security_settings"
            android:textColor="@color/home_red"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_security_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_security_num"
            style="@style/setting_bold_txt"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/block_device_settings"
                style="@style/setting_bold_txt"

                />
            <CheckBox
                android:id="@+id/ch_block_device_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/setting_bold_txt"

                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#74aaaaaa"
            android:layout_marginTop="@dimen/margin15"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/about"
            android:textColor="@color/home_red"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        style="@style/setting_bold_txt"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            />


        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            style="@style/setting_bold_txt"
            android:layout_marginEnd="@dimen/margin15"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#74aaaaaa"
        android:layout_marginTop="@dimen/margin15"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin15"
        android:layout_marginStart="@dimen/margin15"
        android:layout_marginTop="@dimen/margin20"
        android:text="@string/privacy"
        android:textColor="@color/home_red"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        style="@style/setting_bold_txt"
        android:layout_marginEnd="@dimen/margin15"
        android:layout_marginStart="@dimen/margin15"
        android:layout_marginTop="@dimen/margin15"
        />


</LinearLayout>
