<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin15"
        android:text="@string/change_security_num"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:background="@color/home_red"
        android:textColor="#fff"
        android:textSize="@dimen/txtSize18"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        app:passwordToggleEnabled="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/current_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin15"
            android:gravity="start"
            android:hint="@string/current_num"
            android:inputType="numberPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin15"
            android:gravity="start"
            android:hint="@string/new_number"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_new_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin15"
            android:gravity="start"
            android:hint="@string/confirm_number"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>




<LinearLayout
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/third"
    android:gravity="center"
    android:layout_marginTop="@dimen/margin15"
    android:layout_marginBottom="@dimen/margin20"
    >

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin10"
        android:text="@string/save"
        android:textSize="@dimen/txtSize18"
        android:textColor="#fff"
        android:background="@color/home_red"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/txtSize18"
        android:textColor="#fff"
        android:background="@color/home_red"
        android:textStyle="bold"
        android:textAllCaps="false" />

</LinearLayout>

</RelativeLayout>