<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin15"
        android:paddingBottom="@dimen/margin15"
        android:text="@string/check_access"
        android:background="@color/home_red"
        android:textColor="#fff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/txtSize16"
        />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin15"
        android:textSize="@dimen/txtSize16"
        android:textColor="#000"
        android:textAlignment="viewStart"
        android:text="@string/check_access_txt"
        android:layout_below="@+id/title"/>


    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/access_img_size"
        android:layout_below="@+id/txt"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:src="@drawable/access_img"
        android:scaleType="fitXY"
        android:background="@drawable/edit_txt_background"
        android:padding="1dp"
        />

        <CheckBox
            android:id="@+id/ch_accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_show_again"
            android:layout_below="@+id/img"
            android:layout_margin="@dimen/margin15"/>

        <Button
            android:id="@+id/btn_turn_accessibility_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_accessibility_settings"
            android:padding="@dimen/margin15"
            android:background="@color/home_red"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="@dimen/txtSize16"
            android:layout_marginBottom="@dimen/margin20"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ch_accessibility"
            android:textAllCaps="false"
            />



</RelativeLayout>